initial support for turning remediations into playbooks
